# sysinfo-web

client/: package.json  pnpm-lock.yaml
client/src/: App.tsx  CpuInfo.tsx
server/: Cargo.toml
server/src/: main.rs
