[package]
name = "sysinfo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.28.2"
tokio = { version = "1.26.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
futures-util = "0.3"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
